RESOLVED FIXED119545
[Curl] Cookie is not set when url string is unicode.
https://bugs.webkit.org/show_bug.cgi?id=119545
Summary [Curl] Cookie is not set when url string is unicode.
peavo
Reported 2013-08-07 07:27:53 PDT
When the method setCookiesFromDOM is called with an unicode url parameter, the cookie is not correctly set. We need to convert the cookie string to 8 bit, before passing it to the Curl api function.
Attachments
Patch (1.61 KB, patch)
2013-08-07 07:35 PDT, peavo
no flags
peavo
Comment 1 2013-08-07 07:35:28 PDT
Brent Fulgham
Comment 2 2013-08-12 09:25:20 PDT
Comment on attachment 208267 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-08-12 09:51:41 PDT
Comment on attachment 208267 [details] Patch Clearing flags on attachment: 208267 Committed r153946: <http://trac.webkit.org/changeset/153946>
WebKit Commit Bot
Comment 4 2013-08-12 09:51:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.